Minor formatting fixes Fixed phantom header-welcome row that was misaligning text. Fixed phantom trending-profile row that was misaligning text.

--- a/style.css
+++ b/style.css
@@ -87,27 +87,22 @@ img {
 .header-welcome {
     display: grid;
     grid-template-columns: 80px 1fr;
-    grid-template-rows: 1fr 1fr;
+    align-items: center;
     gap: 10px;
     font-size: 1.3em;
     font-weight: 600;
 }
 
 .header-welcome>img {
-    grid-area: 1 / 1 / 3 / 2;
+    grid-area: 1 / 1 / 2 / 2;
     width: 80px;
     height: 80px;
     justify-self: center;
     align-self: center;
 }
 
-.header-welcome>span:first-of-type {
-    align-self: flex-end;
-    font-size: 0.8em;
-}
-
-.header-welcome>span:last-of-type {
-    align-self: flex-start;
+.welcome-text>div:first-of-type {
+    font-size: 0.7em;
 }
 
 .header-buttons {
@@ -274,13 +269,12 @@ img {
 .trending-profile {
     display: grid;
     grid-template-columns: 40px 3fr;
-    grid-template-rows: 1fr;
     padding: 15px;
     gap: 15px;
 }
 
 .trending-profile > img {
-    grid-area: 1 / 1 / 3 / 2;
+    grid-area: 1 / 1 / 2 / 2;
     justify-self: center;
     width: 40px;
     height: 40px;
